--- a/src/Login/style.css
+++ b/src/Login/style.css
@@ -5,13 +5,17 @@
     font-family: 'Lato', sans-serif;
 }
 
+main {
+    width: 100%;
+}
 
 .paginatotal {
-    height: 100vh  ;
+    height: 100vh;
     width: 100%;
     background-color: #053155;
     display: flex;
     justify-content: space-between;
+    align-items: flex-end;
 }
 
 .rapaz_dashboard {
@@ -32,24 +36,22 @@
 
 
 .Logo_Integradash {
-    height: 250px ;
-    width: 250px ;
+    height: 250px;
+    width: 250px;
     margin-top: 70px;
     margin-bottom: 100px;
     margin-left: 25px;
-
-
 }
 
 
 
 .clique_aqui {
     display: flex;
-    justify-content: right ;
+    justify-content: right;
     font-size: 15px;
-   margin-top: 10px;
-   color: gray;
-   
+    margin-top: 10px;
+    color: gray;
+
 }
 
 .clique_aqui a {
@@ -57,9 +59,8 @@
     color: #053155;
     text-decoration: none;
     font-weight: 800;
-      
-
 }
+
 /* 
 .alinhamento_login {
     display: flex;
@@ -69,19 +70,15 @@
 .alinhamento_input {
     display: flex;
     flex-direction: column;
-
-  
 }
 
 .negrito {
-
     font-weight: 900;
     font-size: 15px;
 }
 
 form {
-padding-bottom: 10px;
-
+    padding-bottom: 10px;
 }
 
 ::placeholder {
@@ -96,31 +93,21 @@ padding-bottom: 10px;
     width: 300px;
     font-size: 15px;
     border: none;
-
-
-           }
-
+}
 
 .zoinho {
     display: flex;
     flex-direction: column;
     position: relative;
-
-
 }
 
-
-.testefonte2{
-
-display: none;
-
+.testefonte2 {
+    display: none;
 }
 
- .botao_entrar:hover {
+.botao_entrar:hover {
     background-color: #3b6689;
-    
- }
-
+}
 
 .senha {
     margin-bottom: 10px;
@@ -141,13 +128,9 @@ display: none;
 }
 
 .desenvolvido_por {
-    height: 21px;
     margin-top: 100px;
-    padding: 30px;
-
-
-
 }
+
 .Logo_Claro {
     display: none;
 }
@@ -160,14 +143,14 @@ display: none;
 
     } */
 
-    .zoio{
-        cursor: pointer;
-        position: absolute;
-        width: 30px;
-        left: 265px;
-        bottom: 15px;
-      }
-    
+.zoio {
+    cursor: pointer;
+    position: absolute;
+    width: 30px;
+    left: 265px;
+    bottom: 15px;
+}
+
 /* .teste1 {
 
 } */
@@ -180,60 +163,54 @@ display: none;
 }
 
 .testezoom {
-
     width: 100%;
     height: 100%;
 }
 
-
-
 @media screen and (max-width: 950px) {
 
+    .quadrado_branco {
+        width: 100%;
+    }
 
+    .pagina_metade1 {
+        display: none;
+
+    }
 
     .quadrado_branco {
-        width:100% ;
+        background-image: url(img/fundomobile\ 1.png);
+        background-size: 100vw 70%;
+        background-repeat: no-repeat;
+        display: flex;
+    }
 
-} 
+    .Logo_Integradash {
+        display: none;
+    }
 
-.pagina_metade1 { 
-    display: none;
-    
-}
+    .Logo_Claro {
+        display: flex;
+        max-width: 250px;
+        margin-top: 100px;
+        margin-left: 30px;
 
-.quadrado_branco {
-    background-image: url(img/fundomobile\ 1.png);
-    background-size: 100vw 70%;
-    background-repeat: no-repeat;
-    display: flex;
-}
+    }
 
-.Logo_Integradash {
-    display: none;
-}
+    .alinhamento_input {
+        margin-top: 80px;
+    }
 
-.Logo_Claro {
-    display: flex;
-    max-width: 250px;
-    margin-top:100px;
-    margin-left: 30px;
+    /* TESTE PARA ALTERAR O TEXTO CONFORME DIMINUI A TELA */
 
-}
+    .testefonte {
+        display: flex;
+        /*none*/
+    }
 
-.alinhamento_input{ 
-
-margin-top: 80px;
-
-}
-
-/* TESTE PARA ALTERAR O TEXTO CONFORME DIMINUI A TELA */
-
-.testefonte {
-display: flex; /*none*/
-}
-
-.testefonte2{
-    display: none; /*flex*/
-}
+    .testefonte2 {
+        display: none;
+        /*flex*/
+    }
 
 }
